--- a/m5stack-stickc.yaml
+++ b/m5stack-stickc.yaml
@@ -38,7 +38,7 @@ external_components: #include homething, and esphome-components
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: sept-update
+      ref: main
     refresh: 0s
     components: [homeThing]
   - source:
@@ -63,7 +63,7 @@ packages: # maybe modify: include default ipod controls
   # axp192: !include ../homeThing/common/m5stack-stickc/axp192-marty.yaml # power management and screen backlight
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: sept-update
+    ref: main
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts.yaml, # default font
