--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -26,31 +26,6 @@ wifi:
 substitutions:
   friendly_name: "mega homething"
   log_level: "WARN"
-
-external_components:
-  - source:
-      type: git
-      url: https://github.com/landonr/homeThing
-      ref: lando/refactor-now-playing
-    refresh: 0s
-    components: [homeThing]
-  - source:
-      type: git
-      url: https://github.com/landonr/esphome-components
-      ref: main
-    refresh: 0s
-    components: [
-      homeassistant_component,
-      homeassistant_media_player,
-      media_player_source,
-      media_player_source_sonos,
-      media_player_source_spotify,
-      media_player_source_custom
-    ]
-  - source: github://pr#5214 # used to load images on compile
-    components: [ image ]
-  - source: github://pr#5254 # used to load fonts on compile
-    components: [ font, external_files ]
   
 packages: # maybe modify: include default ipod controls
   remote_package:
@@ -63,7 +38,9 @@ packages: # maybe modify: include default ipod controls
       common/fonts.yaml, # default font
       common/icon_fonts.yaml, # material icons
       common/settings.yaml, # settings screen
-      common/images.yaml # boot screen image
+      common/images.yaml, # boot screen image
+      common/homeThingBase.yaml, # homeThing base components
+      common/homethingMediaPlayerComponents.yaml # homeThing media player components
     ]
     refresh: 0s
 
@@ -103,6 +80,19 @@ homeassistant_media_player:
     - id: media_player_beam
       type: speaker
 
+homeThingDisplayState:
+  id: display_state_id
+  colors:
+    accent_primary: my_primary_accent
+  draw_now_playing_bottom_menu: true
+  font_small: small_font
+  font_medium: medium_font
+  font_large: large_font
+  font_large_heavy: large_font
+  font_material_large: material_font_large
+  font_material_small: material_font_small
+  launch_image: launch_image
+
 homeThing:
   id: homeThingMenu
   settings:
@@ -111,24 +101,13 @@ homeThing:
     menu_rollback: true
     menu_rollover: true
   backlight: backlight
-  media_player_group: media_group_component
   display: my_display
   header:
     time_id: esptime
   on_redraw:
     then:
       component.update: my_display
-  display_state:
-    colors:
-      accent_primary: my_primary_accent
-    draw_now_playing_bottom_menu: true
-    font_small: small_font
-    font_medium: medium_font
-    font_large: large_font
-    font_large_heavy: large_font
-    font_material_large: material_font_large
-    font_material_small: material_font_small
-    launch_image: launch_image
+  display_state: display_state_id
   screens:
     - name: Desk Screen
       entities:
