--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -30,7 +30,7 @@ substitutions:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: main
+    ref: lando/refactor-now-playing
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/ipod/lilygo_tdisplay_ipod_backlight.yaml, # used for toggling backlight
