--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -18,7 +18,7 @@ wifi:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: main
+    ref: lando/refactor-now-playing
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts.yaml, # default font
