--- a/common/homethingBase.yaml
+++ b/common/homethingBase.yaml
@@ -1,12 +1,11 @@
 external_components: #include homething, and esphome-components
   - source:
-      # type: git
-      # url: https://github.com/landonr/homeThing
-      # ref: main
-      type: local
-      path: components
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: lando/refactor-now-playing
+      # type: local
+      # path: components
     refresh: 0s
-    # components: [homeThing, homeThingDisplayState, homeThingApp]
     components: [homeThingDisplayState, homeThing]
   - source: github://pr#5214 # used to load images on compile
     components: [ image ]
