--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -27,6 +27,31 @@ external_components:
       type: git
       url: https://github.com/ssieb/custom_components
     components: [ ip5306 ]
+  - source:
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: lando/refactor-now-playing
+      # type: local
+      # path: components
+    refresh: 0s
+    components: [homeThingDisplayState, homeThing]
+  - source: github://pr#5214 # used to load images on compile
+    components: [ image ]
+  - source: github://pr#5254 # used to load fonts on compile
+    components: [ font, external_files ]
+  - source:
+      type: git
+      url: https://github.com/landonr/esphome-components
+      ref: main
+    refresh: 0s
+    components: [
+      homeassistant_component,
+      homeassistant_media_player,
+      media_player_source,
+      media_player_source_sonos,
+      media_player_source_spotify,
+      media_player_source_custom
+    ]
 
 packages: # maybe modify: include default ipod controls
   remote_package:
@@ -43,8 +68,8 @@ packages: # maybe modify: include default ipod controls
       common/m5stack-fire/backlight.yaml, # backlight
       common/m5stack-fire/sidelight.yaml, # sidelight
       common/images.yaml, # boot screen image
-      common/homeThingBase.yaml, # homeThing base components
-      common/homethingMediaPlayerComponents.yaml # homeThing media player components
+      # common/homeThingBase.yaml, # homeThing base components
+      # common/homethingMediaPlayerComponents.yaml # homeThing media player components
     ]
     refresh: 0s
 
