--- a/m5stack-stickc.yaml
+++ b/m5stack-stickc.yaml
@@ -31,7 +31,7 @@ external_components: #include homething, and esphome-components
       # type: local
       # path: components
     refresh: 0s
-    components: [homeThingDisplayState, homeThing]
+    components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying]
   - source: github://pr#5214 # used to load images on compile
     components: [ image ]
   - source: github://pr#5254 # used to load fonts on compile
@@ -140,6 +140,12 @@ cover: # home assistant cover
     name: "Megadesk"
     id: cover_megadesk
 
+homeThingAppNowPlaying:
+  id: now_playing
+  media_player_group: media_group_component
+  display: my_display
+  display_state: display_state_id
+
 homeThingDisplayState:
   id: display_state_id
   colors:
@@ -167,6 +173,8 @@ homeThing:
     then:
       component.update: my_display
   display_state: display_state_id
+  apps:
+    - now_playing
   screens:
     - name: Desk Screen
       entities:
