--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -29,7 +29,7 @@ external_components:
       # type: local
       # path: components
     refresh: 0s
-    components: [homeThingDisplayState, homeThing]
+    components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying]
   - source: github://pr#5214 # used to load images on compile
     components: [ image ]
   - source: github://pr#5254 # used to load fonts on compile
@@ -132,6 +132,12 @@ cover: # home assistant cover
     name: "Megadesk"
     id: cover_megadesk
 
+homeThingAppNowPlaying:
+  id: now_playing
+  media_player_group: media_group_component
+  display: my_display
+  display_state: display_state_id
+
 homeThingDisplayState:
   id: display_state_id
   draw_battery_level: true
@@ -154,6 +160,8 @@ homeThing:
     charging: charging
   display: my_display
   display_state: display_state_id
+  apps:
+    - now_playing
   on_redraw:
     then:
       component.update: my_display
