--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -26,14 +26,20 @@ wifi:
 substitutions:
   friendly_name: "mega homething"
   log_level: "WARN"
-
+  
 external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
       ref: main
+      # type: local
+      # path: components
     refresh: 0s
-    components: [homeThing]
+    components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying]
+  - source: github://pr#5214 # used to load images on compile
+    components: [ image ]
+  - source: github://pr#5254 # used to load fonts on compile
+    components: [ font, external_files ]
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
@@ -47,11 +53,7 @@ external_components:
       media_player_source_spotify,
       media_player_source_custom
     ]
-  - source: github://pr#5214 # used to load images on compile
-    components: [ image ]
-  - source: github://pr#5254 # used to load fonts on compile
-    components: [ font, external_files ]
-  
+
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
@@ -63,7 +65,7 @@ packages: # maybe modify: include default ipod controls
       common/fonts.yaml, # default font
       common/icon_fonts.yaml, # material icons
       common/settings.yaml, # settings screen
-      common/images.yaml # boot screen image
+      common/images.yaml, # boot screen image
     ]
     refresh: 0s
 
@@ -103,6 +105,25 @@ homeassistant_media_player:
     - id: media_player_beam
       type: speaker
 
+homeThingAppNowPlaying:
+  id: now_playing
+  media_player_group: media_group_component
+  display: my_display
+  display_state: display_state_id
+
+homeThingDisplayState:
+  id: display_state_id
+  colors:
+    accent_primary: my_primary_accent
+  draw_now_playing_bottom_menu: true
+  font_small: small_font
+  font_medium: medium_font
+  font_large: large_font
+  font_large_heavy: large_font
+  font_material_large: material_font_large
+  font_material_small: material_font_small
+  launch_image: launch_image
+
 homeThing:
   id: homeThingMenu
   settings:
@@ -111,24 +132,15 @@ homeThing:
     menu_rollback: true
     menu_rollover: true
   backlight: backlight
-  media_player_group: media_group_component
   display: my_display
   header:
     time_id: esptime
   on_redraw:
     then:
       component.update: my_display
-  display_state:
-    colors:
-      accent_primary: my_primary_accent
-    draw_now_playing_bottom_menu: true
-    font_small: small_font
-    font_medium: medium_font
-    font_large: large_font
-    font_large_heavy: large_font
-    font_material_large: material_font_large
-    font_material_small: material_font_small
-    launch_image: launch_image
+  display_state: display_state_id
+  apps:
+    - now_playing
   screens:
     - name: Desk Screen
       entities:
