--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -30,12 +30,21 @@ wifi:
     password: "zQ9tuPKIfFMu"
 
 external_components:
+  - source: github://landonr/lilygo-tdisplays3-esphome
+    components: [tdisplays3]
+    refresh: 0s
   - source:
       type: git
       url: https://github.com/landonr/homeThing
       ref: main
+      # type: local
+      # path: components
     refresh: 0s
-    components: [homeThing]
+    components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying]
+  - source: github://pr#5214 # used to load images on compile
+    components: [ image ]
+  - source: github://pr#5254 # used to load fonts on compile
+    components: [ font, external_files ]
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
@@ -49,13 +58,6 @@ external_components:
       media_player_source_spotify,
       media_player_source_custom
     ]
-  - source: github://landonr/lilygo-tdisplays3-esphome
-    components: [tdisplays3]
-    refresh: 0s
-  - source: github://pr#5214 # used to load images on compile
-    components: [ image ]
-  - source: github://pr#5254 # used to load fonts on compile
-    components: [ font, external_files ]
   
 packages: # maybe modify: include default ipod controls
   remote_package:
@@ -71,7 +73,7 @@ packages: # maybe modify: include default ipod controls
       common/fonts.yaml, # default font
       common/icon_fonts.yaml, # material icons
       common/settings.yaml, # settings screen
-      common/images.yaml # boot screen image
+      common/images.yaml, # boot screen image
     ]
     refresh: 0s
 
@@ -147,6 +149,25 @@ cover: # home assistant cover
     name: "Megadesk"
     id: cover_megadesk
 
+homeThingAppNowPlaying:
+  id: now_playing
+  media_player_group: media_group_component
+  display: my_display
+  display_state: display_state_id
+
+homeThingDisplayState:
+  id: display_state_id
+  colors:
+    accent_primary: my_primary_accent
+  draw_battery_level: true
+  font_small: small_font
+  font_medium: medium_font
+  font_large: large_font
+  font_large_heavy: large_heavy_font
+  font_material_large: material_font_large
+  font_material_small: material_font_small
+  launch_image: launch_image
+
 homeThing:
   id: homeThingMenu
   settings:
@@ -156,22 +177,13 @@ homeThing:
   battery:
     battery_percent: battery_percent
     charging: charging
-  media_player_group: media_group_component
   display: my_display
   on_redraw:
     then:
       component.update: my_display
-  display_state:
-    colors:
-      accent_primary: my_primary_accent
-    draw_battery_level: true
-    font_small: small_font
-    font_medium: medium_font
-    font_large: large_font
-    font_large_heavy: large_heavy_font
-    font_material_large: material_font_large
-    font_material_small: material_font_small
-    launch_image: launch_image
+  display_state: display_state_id
+  apps:
+    - now_playing
   screens:
     - name: Desk Screen
       entities:
