--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -19,7 +19,6 @@ wifi: # setup wifi, make sure secrets.yaml exists!
   password: !secret wifi_password
   fast_connect: true
   id: wifi_id
-  power_save_mode: HIGH
 
 external_components:
   - source:
@@ -223,6 +222,7 @@ display:
     cs_pin: GPIO5
     dc_pin: GPIO16
     reset_pin: GPIO23
+    backlight_pin: no
     rotation: 90
     update_interval: 10s
     lambda: |-
