use esp32 rmt instead of fastled because of warnings

--- a/common/m5stack-fire/sidelight.yaml
+++ b/common/m5stack-fire/sidelight.yaml
@@ -1,12 +1,13 @@
 light:
-  - platform: fastled_clockless
-    chipset: SK6812
+  - platform: esp32_rmt_led_strip
+    rgb_order: GRB
     pin: GPIO15
     num_leds: 10
-    rgb_order: GRB
-    id: side_light
-    name: ${friendly_name} Remote Light
+    rmt_channel: 1
+    chipset: SK6812
+    name: "${friendly_name} Remote Light"
     restore_mode: ALWAYS_OFF
+    id: side_light
     default_transition_length: 0s
     effects:
       - addressable_rainbow:
