update font and image prs

--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -39,7 +39,7 @@ external_components:
   - source: github://pr#5214 # used to load images on compile
     components: [ image ]
   - source: github://pr#5254 # used to load fonts on compile
-    components: [ font, external_files ]
+    components: [ font ]
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
