--- a/common/homethingBase.yaml
+++ b/common/homethingBase.yaml
@@ -10,4 +10,4 @@ external_components: #include homething, and esphome-components
   - source: github://pr#5214 # used to load images on compile
     components: [ image ]
   - source: github://pr#5254 # used to load fonts on compile
-    components: [ font, external_files ]
+    components: [ font ]
