--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ homeThingTTGO.yaml
 *:Zone.Identifier
 .vscode/c_cpp_properties.json
 ~s3.kicad_pcb.lck
+fp-info-cache
+Case Design/tdisplay-s3/s3-backups
+s3.kicad_prl
