update a few more devices

--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -62,10 +62,10 @@ packages: # maybe modify: include default ipod controls
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/ipod/lilygo_tdisplay_ipod_backlight.yaml, # used for toggling backlight
       common/ipod/lilygo_tdisplay_ipod_sleep.yaml, # required for device to sleep
-      common/fonts.yaml, # default font
-      common/icon_fonts.yaml, # material icons
+      common/fonts-roboto.yaml, # default font
+      common/icon_fonts-local.yaml, # material icons
       common/settings.yaml, # settings screen
-      common/images.yaml, # boot screen image
+      common/images-local.yaml, # boot screen image
     ]
     refresh: 0s
 
