--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -35,10 +35,6 @@ external_components:
       # path: components
     refresh: 0s
     components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying]
-  - source: github://pr#5214 # used to load images on compile
-    components: [ image ]
-  - source: github://pr#5254 # used to load fonts on compile
-    components: [ font, external_files ]
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
@@ -59,15 +55,15 @@ packages: # maybe modify: include default ipod controls
     ref: main
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
-      common/fonts.yaml, # default font
-      common/icon_fonts.yaml, # material icons
+      common/fonts-roboto.yaml, # default font
+      common/icon_fonts-local.yaml, # material icons
       common/settings.yaml, # settings screen
       common/m5stack-fire/ip5306.yaml, # power management and screen backlight
       common/m5stack-fire/sleep.yaml, # deep sleep
       common/m5stack-fire/binary_sensor.yaml, # buttons
       common/m5stack-fire/backlight.yaml, # backlight
       common/m5stack-fire/sidelight.yaml, # sidelight
-      common/images.yaml, # boot screen image
+      common/images-local.yaml, # boot screen image
     ]
     refresh: 0s
 
