--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -36,7 +36,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: lando/revert-fonts
       # type: local
       # path: components
     refresh: 0s
